--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: My Blog
-email: coolwebconfs@gmail.com
-description: My simple blog.
+title: My Creations
+email: gay.carson.andrew@gmail.com
+description: A small blog with all of my creations
 baseurl: ""
 url: ""
 twitter_username: 
@@ -19,8 +19,8 @@ defaults:
       path: ""
       type: "posts"
     values:
-      author: "My Author" # Set default author name
-      categories: "cats"
+      author: "Andrew Carson Gay" # Set default author name
+      categories: "general"
       layout: "post"
       comments: true
   -
