--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: My Creations
 email: gay.carson.andrew@gmail.com
 description: A small blog with all of my creations
 baseurl: ""
-url: ""
+url: "andrewcarsongay.com"
 twitter_username: 
 avatar: "" # Set footer avatar
 paginate: 3
