--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: My Creations
 email: gay.carson.andrew@gmail.com
 description: A small blog with all of my creations
-baseurl: ""
+baseurl: "/gay-carson-andrew.github.io"
 url: "gay-carson-andrew.github.io"
 twitter_username: 
 avatar: "" # Set footer avatar
