--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: My Creations
 email: gay.carson.andrew@gmail.com
 description: A small blog with all of my creations
 baseurl: ""
-#url: "gay-carson-andrew.github.io"
+url: "http://www.andrewcarsongay.com"
 twitter_username: 
 avatar: "" # Set footer avatar
 paginate: 3
